--- a/app.json
+++ b/app.json
@@ -32,9 +32,9 @@
       }
     }
   ],
-  "buildpacks": [
+  "buildpacks": [{
     "url": "heroku/python"
-  ],
+  }],
   "formation": {
     "worker": {
       "quantity": 1,
